Reduce actions on skipped reports

--- a/opentech/apply/projects/templates/application_projects/includes/reports.html
+++ b/opentech/apply/projects/templates/application_projects/includes/reports.html
@@ -76,11 +76,14 @@
                                 <span class="data-block__mobile-label">Privacy: </span>{% if report.public %}Public{% else %}Private{% endif %}
                             </td>
                             <td class="data-block__links">
-                                <a class="data-block__action-link" href="{% url "apply:projects:reports:detail" pk=report.pk %}">View</a>
+                                {% if not report.skipped %}
+                                    <a class="data-block__action-link" href="{% url "apply:projects:reports:detail" pk=report.pk %}">View</a>
 
-                                {% if request.user.is_apply_staff %}
-                                    <a class="data-block__action-link" href="{% url "apply:projects:reports:edit" pk=report.pk %}">Edit</a>
-                                    {% if report.skipped %}
+                                    {% if request.user.is_apply_staff %}
+                                        <a class="data-block__action-link" href="{% url "apply:projects:reports:edit" pk=report.pk %}">Edit</a>
+                                    {% endif %}
+                                {% else %}
+                                    {% if request.user.is_apply_staff %}
                                         <form action="{% url "apply:projects:reports:skip" pk=report.pk %}" method="post">
                                             {% csrf_token %}
                                             <input type="submit" value="Unskip" class="btn data-block__action-link"></input>
