Make next report date as the default start date for frequency change

--- a/opentech/apply/projects/templates/application_projects/includes/reports.html
+++ b/opentech/apply/projects/templates/application_projects/includes/reports.html
@@ -18,11 +18,11 @@
                         <div class="form__info-box">
                             <p>
                                 Next report will be due in
-                                <b class="js-next-report-due-slot">(please choose the next report date)</b>
+                                <b class="js-next-report-due-slot"></b>
                                 and the report period will be
                                 <b class="js-report-period-start"></b>
                                 to
-                                <b class="js-report-period-end">(please choose the next report date)</b>
+                                <b class="js-report-period-end"></b>
                                 and then every
                                 <b class="js-frequency-number-slot"></b>
                                 <b class="js-frequency-period-slot"></b>
