--- a/opentech/apply/activity/templates/messages/email/partners_update_applicant.html
+++ b/opentech/apply/activity/templates/messages/email/partners_update_applicant.html
@@ -1,4 +1,4 @@
-{% extends "messages/email/base.html" %}
+{% extends "messages/email/applicant_base.html" %}
 {% block content %}
 New partner(s) has been added to your submission.
 {% for partner in added %}
